--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
 
       <div class="work" id="work">
+        <h3 class="heading heading--intro ibm mar-bot--32">Recent work</h3>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="##" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
@@ -61,7 +62,7 @@
             <img src="images/logos/myperfectjob.svg" />
           </a>
         </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
+        <div class="work--row mar-bot--80 grid grid--2 grid-gap--32">
           <a href="##" class="work--item sys">
             <img src="images/logos/systemic.svg" />
           </a>
@@ -69,12 +70,16 @@
             <img src="images/logos/saasweekly.svg" />
           </a>
         </div>
+        <a href="##" class="more-context body">
+          See more work
+        </a>
       </div>
 
     </main>
 
     <div class="about" id="about">
       <div class="container">
+        <h3 class="heading heading--intro ibm mar-bot--32">About me</h3>
         <h2 class="heading heading--lite ibm l mar-bot--32">
           <strong>I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design + product, front-end (HTML, CSS + JavaScript) experience. I am dangerous enough when it comes to Ruby and PHP.</strong> I’m a lover of garage rock and live shows, Led Zeppelin & collecting vinyls, minivans, and my collection of colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
         </h2>
@@ -95,6 +100,14 @@
           </a>
         </div>
       </div>
+
+      <footer class="footer">
+        <div class="container">
+          <h4 class="heading ibm micro">
+            © jefff.co
+          </h4>
+        </div>
+    </footer>
     </div>
 
   </body>
