--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
           <a href="##" class="btn">Email</a>
         </div>
         <div id="my-resume">
+          <h3 class="heading heading--intro ibm mar-bot--32 pad-top--80">Résumé</h3>
           <a href="###" class="resume l ibm">
             <span class="resume-content">
-              My résumé
+              View PDF
               <img src="images/arrow-right.svg" class="resume-content--icon" />
             </span>
           </a>
