--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="container">
         <h3 class="heading heading--intro ibm mar-bot--32">About me</h3>
         <h2 class="heading heading--lite ibm l mar-bot--32">
-          <strong>I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP) experience.</strong> I’m a lover of garage rock and live shows, Led Zeppelin & collecting vinyls, minivans, and my collection of colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
+          <strong>I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP) experience.</strong> I’m a lover of garage rock and live shows, collecting vinyls, minivans, and my collection of colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
         </h2>
         <div class="links mar-bot--80 ibm">
           <a href="##" class="btn">LinkedIn</a>
