Add in old portfolio and start on detail pages

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title dir="ltr">made by Jeff | Denver-based nerd, product & growth designer, and front-end tinkerer.</title>
     <meta name="description" content="The web sandbox of Jeff Doan; my work, my musings on product design, email design, and other web-related thingamajigs." />
 
-    <!-- <meta property='og:type' content='website' />
-    <meta property='og:title' content='made by Jefff' />
+    <meta property='og:type' content='website' />
+    <meta property='og:title' content='made by Jeff' />
     <meta property='og:description' content='The web sandbox of Jeff Doan; my work, my musings on product design, email design, and other web-related thingamajigs.' />
-    <meta property='og:image' content='/img/social-image.png' /> -->
+    <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
   </head>
@@ -39,7 +39,7 @@
       <div class="work" id="work">
         <h3 class="heading heading--intro ibm mar-bot--32">Recent work</h3>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="##" class="work--item tw">
+          <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
           </a>
           <a href="##" class="work--item fyn">
@@ -70,8 +70,8 @@
             <img src="images/logos/saasweekly.svg" />
           </a>
         </div>
-        <a href="##" class="more-context body">
-          See more work
+        <a href="more/index.html" class="more-context">
+          View more (old portfolio)
         </a>
       </div>
 
@@ -84,16 +84,16 @@
           <strong>I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP) experience.</strong> I’m a lover of garage rock and live shows, collecting vinyls, minivans, and my collection of colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
         </h2>
         <div class="links mar-bot--80 ibm">
-          <a href="##" class="btn">LinkedIn</a>
-          <a href="##" class="btn">GitHub</a>
-          <a href="##" class="btn">ProductHunt</a>
-          <a href="##" class="btn">Indiehackers</a>
-          <a href="##" class="btn">Instagram</a>
-          <a href="##" class="btn">Email</a>
+          <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank" class="btn">LinkedIn</a>
+          <a href="https://github.com/jefffis?tab=repositories" target="_blank" class="btn">GitHub</a>
+          <a href="https://www.producthunt.com/@jefffis" target="_blank" class="btn">ProductHunt</a>
+          <a href="https://www.indiehackers.com/jefff/history" target="_blank" class="btn">Indiehackers</a>
+          <a href="https://www.instagram.com/jefffff/" target="_blank" class="btn">Instagram</a>
+          <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="btn">Email</a>
         </div>
         <div id="my-resume" class="my-resume">
           <h3 class="heading heading--intro ibm mar-bot--32 pad-top--80">Résumé</h3>
-          <a href="###" class="resume l ibm">
+          <a href="more/jeff-doan-resume--2023.pdf" class="resume l ibm">
             <span class="resume-content">
               View PDF
               <img src="images/arrow-right.svg" class="resume-content--icon" />
