Add in more UI & tweak about me

--- a/thriveworks.html
+++ b/thriveworks.html
@@ -8,20 +8,20 @@
     <title dir="ltr">made by Jeff | Denver-based nerd, product & growth designer, and front-end tinkerer.</title>
     <meta name="description" content="The web sandbox of Jeff Doan; my work, my musings on product design, email design, and other web-related thingamajigs." />
 
-    <!-- <meta property='og:type' content='website' />
-    <meta property='og:title' content='made by Jefff' />
+    <meta property='og:type' content='website' />
+    <meta property='og:title' content='made by Jeff' />
     <meta property='og:description' content='The web sandbox of Jeff Doan; my work, my musings on product design, email design, and other web-related thingamajigs.' />
-    <meta property='og:image' content='/img/social-image.png' /> -->
+    <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     
     <header class="header ibm grid grid--2 grid-gap--32">
-      <a href="index.html" class="logo">
+      <div class="logo">
         <img src="images/me.jpg" class="logo--img" />
         made by <strong>Jeff</strong>
-      </a>
+      </div>
       <nav class="nav">
         <a href="index.html#work" class="nav--link">work</a>
         <a href="index.html#about" class="nav--link">about/contact</a>
@@ -32,6 +32,10 @@
     <main class="container">
       
       <div class="hero hero--detail mar-bot--80">
+        <a href="index.html" class="btn--back mar-bot--32">
+          Go back
+        </a>
+
         <h1 class="heading xl ibm mar-bot--32">Thriveworks: Make the clinicians happy, and the clients will come.</h1>
         <p class="body mar-bot--32">A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks. Includes UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
         <a href="##" target="_blank" class="btn btn--black ibm">View case study</a>
