--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
     <div class="about" id="about">
       <div class="container">
         <h3 class="heading heading--intro ibm mar-bot--32">About me</h3>
-        <h2 class="heading heading--lite ibm l mar-bot--32">
-          <strong>I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP) experience.</strong> I’m a lover of garage rock and live shows, collecting vinyls, minivans, and my collection of colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
+        <h2 class="heading ibm l mar-bot--32">
+          I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP) experience. In my career, I’ve worked across B2C, B2B, SaaS, and mental health. I enjoy designing for conversion, driving customer &amp; business value, optimizing onboarding to be effective, and simplifying pains with bettter tooling.
         </h2>
+        <h3 class="heading--lite ibm body mar-bot--40">
+          I have a passion for using technology to do good, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
+        </h3>
         <div class="links mar-bot--80 ibm">
           <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank" class="btn">LinkedIn</a>
           <a href="https://github.com/jefffis?tab=repositories" target="_blank" class="btn">GitHub</a>
