--- a/thriveworks.html
+++ b/thriveworks.html
@@ -32,11 +32,12 @@
     <main class="container">
       
       <div class="hero hero--detail mar-bot--80">
-        <a href="index.html" class="btn--back mar-bot--32">
+        <a href="index.html" class="btn--back mar-bot--40">
           Go back
         </a>
 
-        <h1 class="heading xl ibm mar-bot--32">Thriveworks: Make the clinicians happy, and the clients will come.</h1>
+        <h3 class="heading heading--intro ibm mar-bot--32">Thriveworks</h3>
+        <h1 class="heading xl ibm mar-bot--32">Make the clinicians happy and the clients will come.</h1>
         <p class="body mar-bot--32">A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks. Includes UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
         <a href="##" target="_blank" class="btn btn--black ibm">View case study</a>
       </div>
