Add in PB and SP

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="##" class="work--item pb">
+          <a href="productboard.html" class="work--item pb">
             <img src="images/logos/productboard.svg" />
           </a>
-          <a href="##" class="work--item sp">
+          <a href="simplepractice.html" class="work--item sp">
             <img src="images/logos/simplepractice.svg" />
           </a>
         </div>
