--- a/productboard.html
+++ b/productboard.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title dir="ltr">Thriveworks | made by Jefff</title>
-    <meta name="description" content="A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks." />
+    <title dir="ltr">Productboard | made by Jefff</title>
+    <meta name="description" content="The most important part of a website is the actual words used on a given page (especially the headline). Produtboard’s headline and subcopy were ambiguous and generic, and the value of the tool was not being communicated." />
 
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
@@ -36,17 +36,19 @@
           Go back
         </a>
 
-        <h3 class="heading heading--intro ibm mar-bot--32">Thriveworks</h3>
-        <h1 class="heading xl ibm mar-bot--32">Make the clinicians happy and the clients will come.</h1>
-        <p class="body mar-bot--32">A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks. Lack of clinician availability was blocking the company from growing, so how might we go about solving this large issue?</p>
-        <p class="body mar-bot--32">What I did: UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
-        <a href="##" target="_blank" class="btn btn--black ibm">View case study</a>
+        <h3 class="heading heading--intro ibm mar-bot--32">Productboard</h3>
+        <h1 class="heading xl ibm mar-bot--32">The homeage headline &amp; subcopy arens’t compelling.</h1>
+        <p class="body mar-bot--32">The most important part of a website is the actual words used on a given page (especially the headline). Produtboard’s headline and subcopy were ambiguous and generic, and the value of the tool was not being communicated.</p>
+        <p class="body mar-bot--32">What I did: UX research, UX writing, data analysis, visual design, user recruitment, and data analysis. I interviewed 16 non-customers to understand their jobs, pains, and tools. I then summarized this into themes and 6 variants of value propositions, and tested this further (using message testing).</p>
       </div>
 
     </main>
       
-    <div class="work-container">
-      <img src="more/img/thriveworks.png" />
+    <div class="work-container text--center">
+      <img src="more/img/pb/old.jpg" class="mar-bot--8" />
+      <p class="mar-bot--40">The old headline + subcopy</p>
+      <img src="more/img/pb/new.jpg" class="mar-bot--8" />
+      <p class="mar-bot--40">The new headline + subcopy</p>
     </div>
 
     <footer class="footer">
