--- a/simplepractice.html
+++ b/simplepractice.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title dir="ltr">Thriveworks | made by Jefff</title>
-    <meta name="description" content="A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks." />
+    <title dir="ltr">Simplepractice | made by Jefff</title>
+    <meta name="description" content="The website had no clear owner of it, and no focus on design, content, or conversion." />
 
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
@@ -36,17 +36,19 @@
           Go back
         </a>
 
-        <h3 class="heading heading--intro ibm mar-bot--32">Thriveworks</h3>
-        <h1 class="heading xl ibm mar-bot--32">Make the clinicians happy and the clients will come.</h1>
-        <p class="body mar-bot--32">A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks. Lack of clinician availability was blocking the company from growing, so how might we go about solving this large issue?</p>
-        <p class="body mar-bot--32">What I did: UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
-        <a href="##" target="_blank" class="btn btn--black ibm">View case study</a>
+        <h3 class="heading heading--intro ibm mar-bot--32">Simplepractice</h3>
+        <h1 class="heading xl ibm mar-bot--32">The website had no clear owner of it, and no focus on design, content, or conversion.</h1>
+        <p class="body mar-bot--32">I redesigned and relaunched the site, as well as built out the web team (2 engineers, 1 SEO specialist). Conversions increased 15%, and lead-gen increased 30%. I also componentized everything to unblock marketing efforts (new landing pages, testing homepage designs, copy, etc.).</p>
+        <p class="body mar-bot--32">What I did: hiring, UX research, UX writing, data analysis, visual design, story writing, prioritization, front-end build, back-end build, and more.</p>
       </div>
 
     </main>
       
-    <div class="work-container">
-      <img src="more/img/thriveworks.png" />
+    <div class="work-container text--center">
+      <img src="more/img/sp/sp.com--old.jpg" class="mar-bot--8" />
+      <p class="mar-bot--40">The old website</p>
+      <img src="more/img/sp/sp.com--new.jpg" class="mar-bot--8" />
+      <p class="mar-bot--40">The new website</p>
     </div>
 
     <footer class="footer">
