Add in PB and SP

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
+
+    <link rel="shortcut icon" href="more/img/favicon.png" type="image/x-icon" />
   </head>
   <body>
     
