Add in other portfolio pieces

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
           </a>
-          <a href="##" class="work--item fyn">
+          <a href="fyn.html" class="work--item fyn">
             <img src="images/logos/fyn.svg" />
           </a>
         </div>
@@ -57,18 +57,18 @@
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="##" class="work--item blc">
+          <a href="blc.html" class="work--item blc">
             <img src="images/logos/bandloveclub.svg" />
           </a>
-          <a href="##" class="work--item mpj">
+          <a href="myperfectjob.html" class="work--item mpj">
             <img src="images/logos/myperfectjob.svg" />
           </a>
         </div>
         <div class="work--row mar-bot--80 grid grid--2 grid-gap--32">
-          <a href="##" class="work--item sys">
+          <a href="systemic.html" class="work--item sys">
             <img src="images/logos/systemic.svg" />
           </a>
-          <a href="##" class="work--item sw">
+          <a href="sw.html" class="work--item sw">
             <img src="images/logos/saasweekly.svg" />
           </a>
         </div>
