--- a/productboard.html
+++ b/productboard.html
@@ -47,9 +47,9 @@
       
     <div class="work-container text--center">
       <img src="more/img/pb/old.jpg" class="mar-bot--8" />
-      <p class="mar-bot--40">The old headline + subcopy</p>
+      <p class="ibm mar-bot--40">The old headline + subcopy</p>
       <img src="more/img/pb/new.jpg" class="mar-bot--8" />
-      <p class="mar-bot--40">The new headline + subcopy</p>
+      <p class="ibm mar-bot--40">The new headline + subcopy</p>
     </div>
 
     <footer class="footer">
