--- a/thriveworks.html
+++ b/thriveworks.html
@@ -46,8 +46,9 @@
 
     </main>
       
-    <div class="work-container">
-      <img src="more/img/thriveworks.png" />
+    <div class="work-container text--center">
+      <img src="images/tc-dashboard.png" class="mar-bot--8" />
+      <p class="ibm">Design concept for our internal clincian tool</p>
     </div>
 
     <footer class="footer">
