--- a/simplepractice.html
+++ b/simplepractice.html
@@ -14,6 +14,18 @@
     <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="more/img/favicon.png" type="image/x-icon" />
+
+    <script>
+      document.addEventListener("touchstart", function(){},false);
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55953811-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     
