--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div id="my-resume" class="my-resume">
           <h3 class="heading heading--intro ibm mar-bot--32 pad-top--80">Résumé</h3>
-          <a href="more/jeff-doan-resume--2023.pdf" class="resume l ibm">
+          <a href="jeff-doan-resume--2023.pdf" class="resume l ibm">
             <span class="resume-content">
               View PDF
               <img src="images/arrow-right.svg" class="resume-content--icon" />
