Add in mini-projects

--- a/index.html
+++ b/index.html
@@ -74,12 +74,26 @@
             <img src="images/logos/myperfectjob.svg" />
           </a>
         </div>
-        <div class="work--row mar-bot--80 grid grid--2 grid-gap--32">
+        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="systemic.html" class="work--item sys">
             <img src="images/logos/systemic.svg" />
           </a>
           <a href="sw.html" class="work--item sw">
             <img src="images/logos/saasweekly.svg" />
+          </a>
+        </div>
+        <div class="work--row mar-bot--80 grid grid--3 grid-gap--32 ibm body">
+          <a href="https://wtf.jefff.co/coverbetter/" target="_blank" class="work--item mini">
+            CoverBetter
+            <span class="desc">A re-usable cover letter</span>
+          </a>
+          <a href="https://wtf.jefff.co/progoogle/" target="_blank" class="work--item mini">
+            Pro-Googlin’
+            <span class="desc">How to search better</span>
+          </a>
+          <a href="https://wtf.jefff.co/interactible/" target="_blank" class="work--item mini">
+            Interactibles
+            <span class="desc">Better interactions for your webs</span>
           </a>
         </div>
         <a href="more/index.html" class="more-context">
