--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
           </a>
           <a href="https://wtf.jefff.co/interactible/" target="_blank" class="work--item mini">
             Interactibles
-            <span class="desc">Better interactions for your webs</span>
+            <span class="desc">Better interactions for webs</span>
           </a>
         </div>
-        <a href="more/index.html" class="more-context">
-          View more (old portfolio)
-        </a>
+        <div class="more-context">
+          <a href="more/index.html">
+            View more (old portfolio)
+          </a>
+        </div>
       </div>
 
     </main>
