Update case study link

--- a/thriveworks.html
+++ b/thriveworks.html
@@ -52,7 +52,7 @@
         <h1 class="heading xl ibm mar-bot--32">Make the clinicians happy and the clients will come.</h1>
         <p class="body mar-bot--32">A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks. Lack of clinician availability was blocking the company from growing, so how might we go about solving this large issue?</p>
         <p class="body mar-bot--32">What I did: UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
-        <a href="##" target="_blank" class="btn btn--black ibm">View case study</a>
+        <a href="https://www.figma.com/proto/yXQ1itx9eMpDrbX65w7McY/Misc-work?page-id=228%3A78&type=design&node-id=1733-78&viewport=-617%2C-552%2C0.06&scaling=min-zoom&starting-point-node-id=1733%3A78&show-proto-sidebar=1&hide-ui=1" target="_blank" class="btn btn--black ibm">View case study</a>
       </div>
 
     </main>
