--- a/blc.html
+++ b/blc.html
@@ -51,7 +51,7 @@
         <h3 class="heading heading--intro ibm mar-bot--32">BandLoveClub</h3>
         <h1 class="heading xl ibm mar-bot--32">Show off the bands you 💕, give them a few 💰.</h1>
         <p class="body mar-bot--32">Create your free profile, rep your favorite bands, tip them anytime for their hardwork. By giving access to fans around the world a central place to tip a band, this is another revenue stream that can offset touring and production costs. Plus, bands can start to identify their superfans and create experiences just for them.</p>
-        <p class="body mar-bot--32">What I did: everything (all design).</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> everything (all design).</p>
         <a href="https://www.figma.com/proto/ZcUE8PQgAcTRQqMHI6JXDn/BandLoveClub?page-id=0%3A1&node-id=1-2&viewport=293%2C238%2C0.5&scaling=min-zoom&starting-point-node-id=1%3A2&hide-ui=1" target="_blank" class="btn btn--black ibm">View prototype</a>
       </div>
 
