--- a/fyn.html
+++ b/fyn.html
@@ -48,10 +48,11 @@
           Go back
         </a>
 
+        <div class="mar-bot--8"><span class="badge">Sold 💰</span></div>
         <h3 class="heading heading--intro ibm mar-bot--32">Find Your Newsletter</h3>
         <h1 class="heading xl ibm mar-bot--32">The best newsletters on the web.</h1>
-        <p class="body mar-bot--32">Finding newsletters should be easier than it is in 2023. This is a collection of great newsletters from the web that makes it easy to search for your interest and sign up for them. Adding new ones daily too. <em>I recently sold this.</em></p>
-        <p class="body mar-bot--32">What I did: everything (all design and build).</p>
+        <p class="body mar-bot--32">Finding newsletters should be easier than it is in 2023. This is a collection of great newsletters from the web that makes it easy to search for your interest and sign up for them.</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> everything (all design and build).</p>
         <a href="https://findnewsletters.com/" target="_blank" class="btn btn--black ibm">View app</a>
       </div>
 
