--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main class="container">
       
       <div class="hero">
-        <h1 class="heading xl ibm mar-bot--32">I work at the intersection of strategy, product, marketing, design, data, and technology.</h1>
+        <h1 class="heading xl ibm mar-bot--32">I work where strategy, product, marketing, design, data, and technology meet.</h1>
         <p class="body">As a product designer, I walk the line between empathy for the user, technical constraint, and business value. I’m typically writing in Google Docs, on a call with a customer, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
       </div>
 
@@ -53,47 +53,64 @@
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
+            <span class="badge">Case Study</span>
           </a>
           <a href="fyn.html" class="work--item fyn">
             <img src="images/logos/fyn.svg" />
+            <span class="badge">Sold 💰</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="productboard.html" class="work--item pb">
             <img src="images/logos/productboard.svg" />
+            <span class="badge">Growth</span>
           </a>
           <a href="simplepractice.html" class="work--item sp">
             <img src="images/logos/simplepractice.svg" />
+            <span class="badge">Growth</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="blc.html" class="work--item blc">
             <img src="images/logos/bandloveclub.svg" />
+            <span class="badge">Side project</span>
           </a>
           <a href="myperfectjob.html" class="work--item mpj">
             <img src="images/logos/myperfectjob.svg" />
+            <span class="badge">Side project</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="systemic.html" class="work--item sys">
             <img src="images/logos/systemic.svg" />
+            <span class="badge">Side project</span>
           </a>
           <a href="sw.html" class="work--item sw">
             <img src="images/logos/saasweekly.svg" />
+            <span class="badge">Sold 💰</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--32">
+          <a href="sp-onboarding.html" class="work--item sys">
+            <img src="images/logos/simplepractice.svg" />
+            <span class="badge">Onboarding/Growth</span>
           </a>
         </div>
         <div class="work--row mar-bot--80 grid grid--3 grid-gap--32 ibm body">
           <a href="https://wtf.jefff.co/coverbetter/" target="_blank" class="work--item mini">
             CoverBetter
             <span class="desc">A re-usable cover letter</span>
+            <span class="badge">Free tool</span>
           </a>
           <a href="https://wtf.jefff.co/progoogle/" target="_blank" class="work--item mini">
             Pro-Googlin’
             <span class="desc">How to search better</span>
+            <span class="badge">Free tool</span>
           </a>
           <a href="https://wtf.jefff.co/interactible/" target="_blank" class="work--item mini">
             Interactibles
             <span class="desc">Better interactions for webs</span>
+            <span class="badge">Free tool</span>
           </a>
         </div>
         <div class="more-context">
