--- a/more/index.html
+++ b/more/index.html
@@ -379,7 +379,7 @@
         <p>A friend and I were tired of not really knowing how to get good ideas of what next to read, binge watch, etc. So we decided to do something about.</p>
         <p>Meet yak: an iOS app where you can get reviews of books, TV shows, movies and music from friends that help you find what to <strong>love</strong> next.</p>
         <p>
-          <strong>What I did:</strong>
+          <strong><strong>What I did:</strong></strong>
           <br />
           Wireframes and design.
         </p>
@@ -402,7 +402,7 @@
           Update: I added a new view for accessing your account management, as well as a new view for in-app notifications. Tablet web is also fully supported now, as well.
         </p>
         <p>
-          <strong>What I did:</strong>
+          <strong><strong>What I did:</strong></strong>
           <br />
           Prototyping, design, front-end build, and PHP integration.</p>
         <p>Built for iOS, Android, and Windows platforms.</p>
@@ -429,7 +429,7 @@
         <p>The LeagueApps platform served over 16 million views in 2014, and 8 million of them were on a mobile device. So, we optimized the templates and assets to give their mobile users the best possible experience.</p>
         <p>I also built a custom mobile eCommerce feature which allows members to purchase product(s) associated with that program.</p>
         <p>
-          <strong>What I did:</strong>
+          <strong><strong>What I did:</strong></strong>
           <br />
           User-research, user-testing, prototyping, design, front-end build, JSP integration.</p>
         <p>Built for iOS, Android, and Windows platforms.</p>
@@ -444,7 +444,7 @@
         <p>In 2014, we&rsquo;ve sent over 2.5 million emails.</p>
         <p>These are all automated, or notification&ndash;based emails, but they contain important information for our customers customers (i.e. the game participants). So, having them look right in all programs was uber important. And, we nailed it. These work in Outlook, Gmail, and everywhere else.</p>
         <p>
-          <strong>What I did:</strong>
+          <strong><strong>What I did:</strong></strong>
           <br />
           Design, front-end build, Litmus testing.</p>
         <p>Works in: iOS, Android, Outlook, Gmail and more</p>
