--- a/myperfectjob.html
+++ b/myperfectjob.html
@@ -51,7 +51,7 @@
         <h3 class="heading heading--intro ibm mar-bot--32">MyPerfectJob</h3>
         <h1 class="heading xl ibm mar-bot--32">Find product people by what they want to do.</h1>
         <p class="body mar-bot--32">MyPerfectJob is the opposite of a job board; it’s an ideal role board. Tell companies what you want and don’t want in your perfect role. Finding your perfect job starts by knowing what you want as well as what you don’t want.</p>
-        <p class="body mar-bot--32">What I did: everything (all design and build).</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> everything (all design and build).</p>
         <a href="https://myperfectjob.club/" target="_blank" class="btn btn--black ibm">View app</a>
       </div>
 
