--- a/productboard.html
+++ b/productboard.html
@@ -51,7 +51,7 @@
         <h3 class="heading heading--intro ibm mar-bot--32">Productboard</h3>
         <h1 class="heading xl ibm mar-bot--32">The homeage headline &amp; subcopy aren’t compelling.</h1>
         <p class="body mar-bot--32">The most important part of a website is the actual words used on a given page (especially the headline). Produtboard’s headline and subcopy were ambiguous and generic, and the value of the tool was not being communicated.</p>
-        <p class="body mar-bot--32">What I did: UX research, UX writing, data analysis, visual design, user recruitment, and data analysis. I interviewed 16 non-customers to understand their jobs, pains, and tools. I then summarized this into themes and 6 variants of value propositions, and tested this further (using message testing).</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, user recruitment, and data analysis. I interviewed 16 non-customers to understand their jobs, pains, and tools. I then summarized this into themes and 6 variants of value propositions, and tested this further (using message testing).</p>
       </div>
 
     </main>
