--- a/simplepractice.html
+++ b/simplepractice.html
@@ -51,7 +51,7 @@
         <h3 class="heading heading--intro ibm mar-bot--32">Simplepractice</h3>
         <h1 class="heading xl ibm mar-bot--32">The website had no clear owner of it, and no focus on design, content, or conversion.</h1>
         <p class="body mar-bot--32">I redesigned and relaunched the site, as well as built out the web team (2 engineers, 1 SEO specialist). Conversions increased 15%, and lead-gen increased 30%. I also componentized everything to unblock marketing efforts (new landing pages, testing homepage designs, copy, etc.).</p>
-        <p class="body mar-bot--32">What I did: hiring, UX research, UX writing, data analysis, visual design, story writing, prioritization, front-end build, back-end build, and more.</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> hiring, UX research, UX writing, data analysis, visual design, story writing, prioritization, front-end build, back-end build, and more.</p>
       </div>
 
     </main>
