--- a/systemic.html
+++ b/systemic.html
@@ -51,7 +51,7 @@
         <h3 class="heading heading--intro ibm mar-bot--32">Systemic</h3>
         <h1 class="heading xl ibm mar-bot--32">A design system for your emails.</h1>
         <p class="body mar-bot--32">Always look great in your users inbox. Systemic is a cross-device optimized, modular email design system to plug into any app. Email isn't going away, and most products forget about their transactional emails. This is an incredibly important channel to continue delivering a seamless experience and to help make your product stickier.</p>
-        <p class="body mar-bot--32">What I did: everything (all design and build).</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> everything (all design and build).</p>
         <a href="https://systemic.netlify.app/" target="_blank" class="btn btn--black ibm">View app</a>
       </div>
 
