--- a/index.html
+++ b/index.html
@@ -90,10 +90,15 @@
             <span class="badge">Sold 💰</span>
           </a>
         </div>
-        <div class="work--row mar-bot--32">
+        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32 ibm body">
           <a href="sp-onboarding.html" class="work--item sys">
             <img src="images/logos/simplepractice.svg" />
             <span class="badge">Onboarding/Growth</span>
+          </a>
+          <a href="https://wtf.jefff.co/getbetalist/" target="_blank" class="work--item mini">
+            Betalist
+            <span class="desc">Test with <em>your</em> customers</span>
+            <span class="badge">Side project</span>
           </a>
         </div>
         <div class="work--row mar-bot--80 grid grid--3 grid-gap--32 ibm body">
